<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/profile_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/menu_profile_label"/>
    <item
        android:id="@+id/exercises_page"
        android:enabled="true"
        android:icon="@drawable/ic_stretching_exercises"
        android:title="@string/menu_exercises_label"/>
    <item
        android:id="@+id/routines_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_fitness_center_24"
        android:title="@string/menu_routines_label"/>
    <item
        android:id="@+id/settings_page"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/menu_settings_label"/>
</menu>