<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Screens.Routines.RoutinesFragment"
    android:gravity="center_horizontal">

    <SearchView
        android:id="@+id/routine_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ExpandableListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/routine_exp_list"
        android:divider="@color/transparent"
        />

    <TextView
        android:id="@+id/nothing_found_routines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_routine_search_result"
        android:visibility="gone"/>

</LinearLayout>

