<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Screens.Exercises.ExerciseFragment"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <SearchView
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        android:dividerHeight="2dp"
        android:divider="@android:color/white"
        android:layout_below="@+id/etSearch" />

    <TextView
        android:id="@+id/nothingfoundmessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nothing_found_message"
        android:visibility="gone"/>


</LinearLayout>